Fix backdrop not showing up

--- a/src/HistoryModal.css
+++ b/src/HistoryModal.css
@@ -1,6 +1,6 @@
 ::backdrop {
   background-color: #000;
-  opacity: 0.3;
+  opacity: 0.7;
 }
 
 .Modal {
